# aws-cpp-lambda

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile.development  credentials.TEMPLATE  devcontainer.json
deploy/: .gitignore  README.md  cdk.json  package-lock.json  package.json
deploy/config/: config.ts
deploy/lib/: aws-cpp-lambda-stack.ts  base-stack.ts
src/: main.cc
